# doc/openapi.yaml
@@ -8,12 +8,12 @@ info:
     - [The Quick Event repository](https://github.com/Quick-Event/quickbox)
   version: 0.0.1
 paths:
-  /event:
+  /:
     get:
       tags:
-        - qxhttpd
+        - web
       summary: Get event list html page
-      operationId: eventList
+      operationId: index
       responses:
         '200':
           description: Success
@@ -21,81 +21,111 @@ paths:
             text/plain:
               schema:
                 type: string
-        '404':
-          description: Invalid event key
-  /event/{eventKey}:
+  /event/{eventId}:
     get:
       tags:
-        - qxhttpd
+        - web
       summary: Get event info html page
       operationId: eventInfo
       parameters:
-      - name: eventKey
+      - name: eventId
         in: path
         required: true
         schema:
-          $ref: '#/components/schemas/EventKey'
+          $ref: '#/components/schemas/EventId'
       responses:
         '200':
           description: Success
           content:
-            text/plain:
+            text/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/EventRecord'
         '404':
           description: Invalid event key
+  /api/event/{eventId}:
+    get:
+      tags:
+        - API
+      summary: Get event record
+      operationId: get_event
+      parameters:
+      - name: eventId
+        in: path
+        required: true
+        schema:
+          $ref: '#/components/schemas/EventId'
+      responses:
+        '200':
+          description: Success
+          content:
+            text/json:
+              schema:
+                $ref: '#/components/schemas/EventRecord'
+        '404':
+          description: Invalid event ID
   /api/event:
     post:
       tags:
-        - qxhttpd
+        - API
       summary: Register event
       # description: Add a new pet to the store
-      operationId: registerEvent
+      operationId: register_event
+      parameters:
+      - name: eventKey
+        in: header
+        required: true
+        schema:
+          $ref: '#/components/schemas/EventKey'
       requestBody:
         # description: Create a new pet in the store
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/EventDefinition'
+              $ref: '#/components/schemas/EventRecord'
         required: true
       responses:
         '200':
-          description: Successful operation
+          description: SEvent exists already
           content:
             application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/EventId'
+        '201':
+          description: Event created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EventId'
         '400':
           description: Invalid input
         '422':
           description: Validation exception
-  /api/event/{eventKey}/ochecklist:
+  /api/event/{eventId}/oc:
     post:
       tags:
-        - O-CheckList
+        - API
       summary: Add new O-Checklist change set
       # description: Add a new pet to the store
       operationId: addOChecklistChangeSet
       parameters:
-      - name: eventKey
+      - name: eventId
         in: path
-        description: Event key generated by Quick Event
+        required: true
+        schema:
+          $ref: '#/components/schemas/EventId'
+      - name: eventKey
+        in: header
         required: true
         schema:
           $ref: '#/components/schemas/EventKey'
       requestBody:
-        # description: Create a new pet in the store
+        # description: Add new recor set
         content:
           application/yaml:
             schema:
               type: array
               items:
                 $ref: '#/components/schemas/OChecklistRunner'
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/OChecklistRunner'
         required: true
       responses:
         '200':
@@ -110,13 +140,24 @@ paths:
           description: Validation exception
     get:
       tags:
-        - O-CheckList
+        - API
       summary: Read change set list
       # description: Add a new pet to the store
       operationId: listOChecklistChangeSets
       parameters:
-      - name: eventKey
+      - name: eventId
         in: path
+        required: true
+        schema:
+          $ref: '#/components/schemas/EventId'
+      - name: idgt
+        in: query
+        description: only change-sets with ID greater will be returned
+        required: false
+        schema:
+          $ref: '#/components/schemas/ChangeSetId'
+      - name: eventKey
+        in: header
         required: true
         schema:
           $ref: '#/components/schemas/EventKey'
@@ -128,23 +169,23 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ChangeSetId'
+                  $ref: '#/components/schemas/OChecklistChangeSet'
         '404':
-          description: Invalid event key
-  /api/event/{eventKey}/qe/chng/in:
+          description: Invalid event key oe event Id
+  /api/event/{eventId}/qe/chng/in:
     get:
       tags:
-        - QuickEvent
+        - API
       summary: Read change set list
       operationId: getQEChangeSetList
       parameters:
-      - name: eventKey
+      - name: eventId
         in: path
         required: true
         schema:
-          $ref: '#/components/schemas/EventKey'
+          $ref: '#/components/schemas/EventId'
       - in: query
-        name: id-gt
+        name: idgt
         # style: deepObject
         # allowReserved: true
         schema:
@@ -157,21 +198,21 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ChangeSetId'
+                  $ref: '#/components/schemas/OChecklistChangeSet'
         '404':
           description: Invalid event key
-  /api/event/{eventKey}/qe/chng/in/{changeSetId}:
+  /api/event/{eventId}/qe/chng/in/{changeSetId}:
     get:
       tags:
-        - QuickEvent
+        - API
       summary: Read change set
       operationId: getQEChangeSet
       parameters:
-      - name: eventKey
+      - name: eventId
         in: path
         required: true
         schema:
-          $ref: '#/components/schemas/EventKey'
+          $ref: '#/components/schemas/EventId'
       - name: changeSetId
         in: path
         required: true
@@ -188,20 +229,20 @@ paths:
                   $ref: '#/components/schemas/QEChangeRecord'
         '404':
           description: Invalid event key
-  /api/event/{eventKey}/qe/startListIOF30Xml:
+  /api/event/{eventId}/qe/startListIOF30Xml:
     get:
       tags:
-        - QuickEvent
+        - API
       summary: Read actual start list
       # description: Add a new pet to the store
       operationId: startListIOF30Xml
       parameters:
-      - name: eventKey
+      - name: eventId
         in: path
         description: Event key generated by Quick Event
         required: true
         schema:
-          $ref: '#/components/schemas/EventKey'
+          $ref: '#/components/schemas/EventId'
       responses:
         '200':
           description: Successful operation
@@ -213,10 +254,8 @@ paths:
           description: Invalid event key
 components:
   schemas:
-    EventDefinition:
+    EventRecord:
       properties:
-        eventKey:
-          $ref: '#/components/schemas/EventKey'
         name:
           type: string
         date:
@@ -224,15 +263,18 @@ components:
         place:
           type: string
       required:
-      - eventKey
+      - eventId
     SiId:
       type: integer
       format: int64
       description: SportIdend card number
       example: 987456
+    EventId:
+      type: string
+      description: Event id generated by QX server
     EventKey:
       type: string
-      description: Event key generated by Quick Event
+      description: Unique event key generated by Quick Event
     OChecklistRunner:
       properties:
         Id:
@@ -246,7 +288,7 @@ components:
           - Did not start (DNS)
           - Late start
         Card:
-          $ref: '#/components/schemas/EventKey'
+          $ref: '#/components/schemas/EventId'
         ClassName:
           type: string
           # format: int64
@@ -259,6 +301,14 @@ components:
           $ref: '#/components/schemas/Time'
         Comment:
           type: string
+    OChecklistChangeSet:
+      properties:
+        id:
+          $ref: '#/components/schemas/ChangeSetId'
+        records:
+          type: array
+          items:
+            $ref: '#/components/schemas/OChecklistRunner'
     ChangeSetId:
       type: integer
       example: 123
@@ -289,7 +339,7 @@ components:
           format: int64
           example: 1234
         checkTime:
-          $ref: '#/components/schemas/EventKey'
+          $ref: '#/components/schemas/EventId'
         comment:
           type: string
     QERadioRecord:
@@ -297,4 +347,4 @@ components:
         siId:
           $ref: '#/components/schemas/SiId'
         punchTime:
-          $ref: '#/components/schemas/EventKey'
+          $ref: '#/components/schemas/EventId'
